--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+main {
+    filter: blur(5px);
+}
+
 .container {
     display: grid;
     justify-content: center;
@@ -7,24 +11,24 @@
 .board {
     display: grid;
     
-    grid-template-columns: repeat(7, 10vh);
-    grid-template-rows: repeat(6, 10vh);
+    grid-template-columns: repeat(7, 11vh);
+    grid-template-rows: repeat(6, 11vh);
     
     justify-items: center;
     margin: 100px;
     padding: 10px;
 
-    background-color: rgb(0, 79, 226);
-    border: 4px solid black;
+    background-color: rgb(0, 144, 240);
+    border: 6px solid black;
     border-radius: 2vh;
 }
 
 .board button {
-    width: 8vh;
-    height: 8vh;
+    width: 9vh;
+    height: 9vh;
 
     background-color: white;
-    border: 4px solid black;
+    border: 5.5px solid black;
     border-radius: 10vh;
     
 }
